--- a/Login/WebContent/register.xhtml
+++ b/Login/WebContent/register.xhtml
@@ -23,7 +23,7 @@
             <h:inputSecret value="#{login.password}" />
         </div>
         <div id="submitBtn" class="textPlacement">
-            <h:commandButton value="Register" action="#{login.validateNewUser}" />   
+            <h:commandButton value="Register" action="#{login.validateNewUser(username, password}" />   
         </div>
         <div id="homeBtn" class="textPlacement">
         	<h:button value ="Home" outcome="/home.xhtml"/>
