--- a/Login/WebContent/success.xhtml
+++ b/Login/WebContent/success.xhtml
@@ -20,5 +20,7 @@
     <div id="homeBtn" class="textPlacement">
        	<h:button value ="Home" outcome="/home.xhtml"/>
     </div>
+    <h:button value="Login" outcome="index" />
+    <h:button value="Register" outcome="register" />
 </h:body>
 </html>
