--- a/InventoryManagementSystem/WebContent/Home.xhtml
+++ b/InventoryManagementSystem/WebContent/Home.xhtml
@@ -4,15 +4,8 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"> 
 
-
+<h:head></h:head> 
 <body> 
-	Response page:
-	<h:outputLabel value = "#{creation.sku}" />
-	<h:outputLabel value = "#{creation.itemName}" />
-	<h:outputLabel value = "#{creation.itemDescription}" />
-	<h:outputLabel value = "#{creation.quantity}" />
-	<br></br>
-	<h:commandButton action="#{formController.onLogOff()}" value="Log Out"/>
-
+	
 </body> 
 </html>
