--- a/InventoryManagementSystem/WebContent/index.xhtml
+++ b/InventoryManagementSystem/WebContent/index.xhtml
@@ -23,7 +23,7 @@
             <h:inputSecret value="#{login.password}" />
         </div>
         <div id="submitBtn" class="textPlacement">
-            <h:commandButton value="Login" action="#{formController.service.validateUserAndPassword()}" />   
+            <h:commandButton value="Login" action="#{login.validateUserAndPassword}" />   
         </div>
         <div id="homeBtn" class="textPlacement">
         	<h:button value ="Home" outcome="/home.xhtml"/>
